src/objects/WageTableEmployee__c.object
<CustomObject>
    <fields>
        <fullName>AddTimeAccrueLeavePaycodeSuffix__c</fullName>
        <defaultValue>&quot;AT&quot;</defaultValue>
        <label>Add Time Accrue Leave Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddTimeNonAccrueLeavePaycodeSuffix__c</fullName>
        <defaultValue>&quot;AN&quot;</defaultValue>
        <label>Add Time Non Accrue Leave Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance24HourPaycodeSuffix__c</fullName>
        <defaultValue>&quot;24&quot;</defaultValue>
        <label>Allowance 24Hour Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance24Hour__c</fullName>
        <defaultValue>0.24</defaultValue>
        <label>Allowance 24Hour</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCallPaycodeSuffix__c</fullName>
        <defaultValue>&quot;OC&quot;</defaultValue>
        <label>Allowance On Call Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCallSPHPaycodeSuffix__c</fullName>
        <defaultValue>&quot;OP&quot;</defaultValue>
        <inlineHelpText>On Call Allowance for Sunday and Public Holiday</inlineHelpText>
        <label>Allowance On Call SPH Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCallSatPaycodeSuffix__c</fullName>
        <defaultValue>&quot;OS&quot;</defaultValue>
        <label>Allowance On Call Sat Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCallSaturday__c</fullName>
        <defaultValue>1.3452</defaultValue>
        <label>Allowance On Call Saturday</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCallSundayPH__c</fullName>
        <defaultValue>1.5694</defaultValue>
        <label>Allowance On Call Sunday PH</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCallWeekdayPaycodeSuffix__c</fullName>
        <defaultValue>&quot;OW&quot;</defaultValue>
        <label>Allowance On Call Weekday Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCallWeekday__c</fullName>
        <defaultValue>0.893</defaultValue>
        <label>Allowance On Call Weekday</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AllowanceOnCall__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Allowance On Call</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllowancePaycodeSuffix__c</fullName>
        <defaultValue>&apos;AL&apos;</defaultValue>
        <label>Allowance Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowanceSleepOverPaycodeSuffix__c</fullName>
        <defaultValue>&quot;SO&quot;</defaultValue>
        <label>Allowance SleepOver Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowanceSleepOver__c</fullName>
        <defaultValue>0.35</defaultValue>
        <label>Allowance SleepOver</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AllowanceSleepoverRate__c</fullName>
        <defaultValue>41.92</defaultValue>
        <label>Allowance Sleepover Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardType__c</fullName>
        <label>Award Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allied Health</fullName>
                </value>
                <value>
                    <fullName>Home Care</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallInDurationTreshold__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Call In Duration Treshold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallInPaycodeSuffix__c</fullName>
        <defaultValue>&quot;CI&quot;</defaultValue>
        <label>Call In Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly Care</fullName>
                </value>
                <value>
                    <fullName>Overnight Allowance</fullName>
                </value>
                <value>
                    <fullName>24 Hour Allowance</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Uniform Allowance</fullName>
                </value>
                <value>
                    <fullName>Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Uniform Weekly Allowance</fullName>
                </value>
                <value>
                    <fullName>Transportation-166</fullName>
                </value>
                <value>
                    <fullName>Transportation-167</fullName>
                </value>
                <value>
                    <fullName>Transportation-178</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:05 AM</fullName>
                </value>
                <value>
                    <fullName>12:10 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:20 AM</fullName>
                </value>
                <value>
                    <fullName>12:25 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:35 AM</fullName>
                </value>
                <value>
                    <fullName>12:40 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:50 AM</fullName>
                </value>
                <value>
                    <fullName>12:55 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:05 AM</fullName>
                </value>
                <value>
                    <fullName>1:10 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:20 AM</fullName>
                </value>
                <value>
                    <fullName>1:25 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:35 AM</fullName>
                </value>
                <value>
                    <fullName>1:40 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:50 AM</fullName>
                </value>
                <value>
                    <fullName>1:55 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:05 AM</fullName>
                </value>
                <value>
                    <fullName>2:10 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:20 AM</fullName>
                </value>
                <value>
                    <fullName>2:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
                <value>
                    <fullName>MNC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MakeUpHoursBreakTreshold__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Make Up Hours Break Treshold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MakeUpHoursBreak__c</fullName>
        <defaultValue>0.5</defaultValue>
        <label>Make Up Hours Break</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MakeUpHoursDayPaycodeSuffix__c</fullName>
        <defaultValue>&quot;MD&quot;</defaultValue>
        <label>Make Up Hours Day Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MakeUpHoursFortnightPaycodeSuffix__c</fullName>
        <defaultValue>&quot;MFN&quot;</defaultValue>
        <label>Make Up Hours Fortnight Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MakeUpMinimumShiftHours__c</fullName>
        <defaultValue>2</defaultValue>
        <inlineHelpText>Minimum Shift hours per day</inlineHelpText>
        <label>Make Up Minimum Shift Hours</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumWorkingHourDay__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Maximum Working Hour Day</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumWorkingHourFortnight__c</fullName>
        <defaultValue>76</defaultValue>
        <label>Maximum Working Hour Fortnight</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overtime1stTresholdPaycodeSuffix__c</fullName>
        <defaultValue>&quot;VR&quot;</defaultValue>
        <label>Overtime 1st Treshold Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overtime1stTresholdRateFactor__c</fullName>
        <defaultValue>1.5</defaultValue>
        <label>Overtime 1st Treshold Rate Factor</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overtime1stTreshold__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Overtime 1st Treshold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OvertimeCallInPaycodeSuffix__c</fullName>
        <defaultValue>&quot;C&quot;</defaultValue>
        <label>Overtime Call In Paycode Suffix</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OvertimeNextTresholdPaycodeSuffix__c</fullName>
        <defaultValue>&quot;VX&quot;</defaultValue>
        <label>Overtime Next Treshold Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OvertimeNextTresholdRateFactor__c</fullName>
        <defaultValue>2.0</defaultValue>
        <label>Overtime Next Treshold Rate Factor</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OvertimePHTresholdPaycodeSuffix__c</fullName>
        <defaultValue>&quot;VP&quot;</defaultValue>
        <label>Overtime PH Treshold Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OvertimePHTresholdRateFactor__c</fullName>
        <defaultValue>2.5</defaultValue>
        <label>Overtime PH Treshold Rate Factor</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHCompensationPaycodeSuffix__c</fullName>
        <defaultValue>&quot;PC&quot;</defaultValue>
        <label>PH Compensation Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentWageTable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Wage Table</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WageTableEmployee__c.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WageTableEmployee__c</referenceTo>
        <relationshipLabel>Wage Table Employee</relationshipLabel>
        <relationshipName>WageTables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayCode__c</fullName>
        <label>Pay Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodOfService__c</fullName>
        <label>Period Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weeknights</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Public Holidays</fullName>
                </value>
                <value>
                    <fullName>Public Holidays Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublicHolidayCasualPaycodeSuffix__c</fullName>
        <defaultValue>&quot;CPH&quot;</defaultValue>
        <label>Public Holiday Casual Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicHolidayCasual__c</fullName>
        <defaultValue>1.5</defaultValue>
        <label>Public Holiday Casual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PublicHolidayPemanentPaycodeSuffix__c</fullName>
        <defaultValue>&quot;PPH&quot;</defaultValue>
        <label>Public Holiday Pemanent Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicHolidayPermanent__c</fullName>
        <defaultValue>1.5</defaultValue>
        <label>Public Holiday Permanent</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SaturdayCasualPaycodeSuffix__c</fullName>
        <defaultValue>&quot;CSA&quot;</defaultValue>
        <label>Saturday Casual Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaturdayCasual__c</fullName>
        <defaultValue>0.5</defaultValue>
        <label>Saturday Casual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SaturdayPermanentPaycodeSuffix__c</fullName>
        <defaultValue>&quot;PSA&quot;</defaultValue>
        <label>Saturday Permanent Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SaturdayPermanent__c</fullName>
        <defaultValue>0.5</defaultValue>
        <label>Saturday Permanent</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SleepoverSurchargePaycodeSuffix__c</fullName>
        <defaultValue>&quot;SS&quot;</defaultValue>
        <label>Sleepover Surcharge Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SleepoverSurchargeTreshold__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Sleepover Surcharge Treshold</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpecificLevel__c</fullName>
        <label>Specific Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:05 AM</fullName>
                </value>
                <value>
                    <fullName>12:10 AM</fullName>
                </value>
                <value>
                    <fullName>12:15 AM</fullName>
                </value>
                <value>
                    <fullName>12:20 AM</fullName>
                </value>
                <value>
                    <fullName>12:25 AM</fullName>
                </value>
                <value>
                    <fullName>12:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:35 AM</fullName>
                </value>
                <value>
                    <fullName>12:40 AM</fullName>
                </value>
                <value>
                    <fullName>12:45 AM</fullName>
                </value>
                <value>
                    <fullName>12:50 AM</fullName>
                </value>
                <value>
                    <fullName>12:55 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:05 AM</fullName>
                </value>
                <value>
                    <fullName>1:10 AM</fullName>
                </value>
                <value>
                    <fullName>1:15 AM</fullName>
                </value>
                <value>
                    <fullName>1:20 AM</fullName>
                </value>
                <value>
                    <fullName>1:25 AM</fullName>
                </value>
                <value>
                    <fullName>1:30 AM</fullName>
                </value>
                <value>
                    <fullName>1:35 AM</fullName>
                </value>
                <value>
                    <fullName>1:40 AM</fullName>
                </value>
                <value>
                    <fullName>1:45 AM</fullName>
                </value>
                <value>
                    <fullName>1:50 AM</fullName>
                </value>
                <value>
                    <fullName>1:55 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:05 AM</fullName>
                </value>
                <value>
                    <fullName>2:10 AM</fullName>
                </value>
                <value>
                    <fullName>2:15 AM</fullName>
                </value>
                <value>
                    <fullName>2:20 AM</fullName>
                </value>
                <value>
                    <fullName>2:25 AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SundayCasualPaycodeSuffix__c</fullName>
        <defaultValue>&quot;CSU&quot;</defaultValue>
        <label>Sunday Casual Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SundayCasual__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sunday Casual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SundayPermanentPaycodeSuffix__c</fullName>
        <defaultValue>&quot;PSU&quot;</defaultValue>
        <label>Sunday Permanent Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SundayPermanent__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sunday Permanent</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TravelAllowancePayCodeSuffix__c</fullName>
        <defaultValue>&apos;TA&apos;</defaultValue>
        <label>Travel Allowance Pay Code Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TravelTimePaycodeSuffix__c</fullName>
        <defaultValue>&quot;TT&quot;</defaultValue>
        <label>Travel Time Paycode Suffix</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekdayCasualPaycodeSuffix__c</fullName>
        <defaultValue>&quot;CWD&quot;</defaultValue>
        <label>Weekday Casual Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekdayCasual__c</fullName>
        <defaultValue>0.25</defaultValue>
        <label>Weekday Casual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WeeklyUniformAllowancePaycode__c</fullName>
        <defaultValue>&quot;WAL&quot;</defaultValue>
        <label>Weekly Uniform Allowance Paycode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeeklyUniformAllowanceRate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Weekly Uniform Allowance Rate</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeeknightCasualPaycodeSuffix__c</fullName>
        <defaultValue>&quot;CWN&quot;</defaultValue>
        <label>Weeknight Casual Paycode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeeknightCasual__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>Weeknight Casual</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WeeknightPermanentPayCodeSuffix__c</fullName>
        <defaultValue>&quot;PWN&quot;</defaultValue>
        <label>Weeknight Permanent PayCode Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeeknightPermanent__c</fullName>
        <defaultValue>0.15</defaultValue>
        <label>Weeknight Permanent</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WorkingHour24__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Working Hour 24</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkingHourSleepover__c</fullName>
        <defaultValue>4</defaultValue>
        <label>Working Hour Sleepover</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Wage Table Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ParentWageTable__c</columns>
        <columns>AwardType__c</columns>
        <columns>Category__c</columns>
        <columns>SpecificLevel__c</columns>
        <columns>Rate__c</columns>
        <columns>PayCode__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Child_Wage_Tables</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ParentWageTable__c</columns>
        <columns>Category__c</columns>
        <columns>SpecificLevel__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Rate__c</columns>
        <columns>PayCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>WageTableEmployee__c.WageTable</value>
        </filters>
        <label>Child Wage Tables</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ParentWageTables</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>AwardType__c</columns>
        <columns>WeekdayCasual__c</columns>
        <columns>WeeknightCasual__c</columns>
        <columns>SaturdayCasual__c</columns>
        <columns>SundayCasual__c</columns>
        <columns>PublicHolidayCasual__c</columns>
        <columns>WeeknightPermanent__c</columns>
        <columns>SaturdayPermanent__c</columns>
        <columns>SundayPermanent__c</columns>
        <columns>PublicHolidayPermanent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ParentWageTable__c</field>
            <operation>equals</operation>
        </filters>
        <label>Parent Wage Tables</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Wage_Table</fullName>
        <columns>NAME</columns>
        <columns>ParentWageTable__c</columns>
        <columns>Category__c</columns>
        <columns>PeriodOfService__c</columns>
        <columns>SpecificLevel__c</columns>
        <columns>PayCode__c</columns>
        <columns>Rate__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>AwardType__c</columns>
        <filterScope>Everything</filterScope>
        <label>Wage Table</label>
    </listViews>
    <nameField>
        <label>Wage Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wage Table Employee</pluralLabel>
    <recordTypes>
        <fullName>ParentWageTable</fullName>
        <active>true</active>
        <label>Parent Wage Table</label>
    </recordTypes>
    <recordTypes>
        <fullName>WageTable</fullName>
        <active>true</active>
        <label>Wage Table</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>